# bevy_card3d_kit_example

./: Cargo.toml  README.MD
assets/lua/: EX001-A-002.lua  NAAI-A-001.lua  S001-A-001.lua  S001-M-001.lua  S001-T-001.lua
src/: card_info.rs  debug_lab.rs  game.rs  hand_card.rs  main.rs  zone_info.rs
src/card_info/: card_enums.rs  mod.rs
src/card_zone/: can_set.rs  mod.rs
src/lua/: mod.rs
src/ui/: mod.rs
